--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "langdetect": "^0.2.1",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
