--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "axios": "^1.3.4",
     "langdetect": "^0.2.1",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6"
+    "notiflix": "^3.2.6",
+    "simplelightbox": "^2.13.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
